--- a/main.html
+++ b/main.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+	<div class="hero-container">
+  <img src="https://storage.googleapis.com/acciojob-open-file-collections/pinterest.png" alt="Hero Image" class="hero-image">
+</div>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
